@@ -71,6 +71,10 @@ pstree -p 进程号 | wc -l,直接算出线程的总数过来
 
 
 
+JAVA_OPTS="-server -Djava.awt.headless=true  -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-%t.log -XX:+HeapDumpOnOutOfMemoryError  -XX:HeapDumpPath=/home/app/oom"
+
+
+
 ## 线程池
 
 ```
@@ -94,8 +98,12 @@ handler：线程池无法继续接收任务(队列已满且线程数达到maximu
 ##### workQueue队列
 
 SynchronousQueue(同步移交队列)：队列不作为任务的缓冲方式，可以简单理解为队列长度为零
-LinkedBlockingQueue(无界队列)：队列长度不受限制，当请求越来越多时(任务处理速度跟不上任务提交速度造成请求堆积)可能导致内存占用过多或OOM
+LinkedBlockingQueue(无界队列)：队列长度不受限制，当请求越来越多时(任务处理速度跟不上任务提交速度造成请求堆积)可能导致内存占用过多或OOM LinkedBlockingQueue会默认一个类似无限大小的容量(Integer.MAX_VALUE)，这样的话，如果生产者的速度一旦大于消费者的速度，也许还没有等到队列满阻塞产生，系统内存就有可能已被消耗殆尽了。
 ArrayBlockintQueue(有界队列)：队列长度受限，当队列满了就需要创建多余的线程来执行任务
+
+
+
+ 
 
 #####  handler拒绝策略
 
@@ -103,3 +111,27 @@ AbortPolicy：中断抛出异常
 DiscardPolicy：默默丢弃任务，不进行任何通知
 DiscardOldestPolicy：丢弃掉在队列中存在时间最久的任务
 CallerRunsPolicy：让提交任务的线程去执行任务(对比前三种比较友好一丢丢) 
+
+```java
+public ThreadPoolExecutor(int corePoolSize, int maximumPoolSize, long keepAliveTime, TimeUnit unit, BlockingQueue workQueue, ThreadFactory threadFactory, RejectedExecutionHandler handler) {
+        if (corePoolSize 0 || maximumPoolSize <= 0 || maximumPoolSize keepAliveTime 0)
+        throw new IllegalArgumentException();
+        if (workQueue == null || threadFactory == null || handler == null) throw new NullPointerException();
+        this.corePoolSize = corePoolSize;
+        this.maximumPoolSize = maximumPoolSize;
+        this.workQueue = workQueue;
+        this.keepAliveTime = unit.toNanos(keepAliveTime);
+        this.threadFactory = threadFactory;
+        this.handler = handler;
+    }
+```
+
+**线程池五种状态**
+
+
+
+##### CyclicBarrier
+
+
+
+## 垃圾回收
